--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,15 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #8B0000;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-family: Baskerville;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #e3d4fd;
 }
 
 .App-link {
